<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeSettingsLayout"
    android:background="@color/colorPrimaryDark"
    tools:context=".SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/default_avatar" />

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_below="@+id/settings_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/display_name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar" />

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_below="@+id/settings_display_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/hi_there_i_m_using_ab_chat_app"
        android:textAlignment="center"
        android:textSize="16sp"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar" />

    <Button
        android:id="@+id/settings_image_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="105dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/button_style"
        android:text="@string/change_image"
        android:textAlignment="center"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/settings_status_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/white"
        android:background="@drawable/button_style"
        android:text="@string/change_status"
        android:textAlignment="center"
        tools:targetApi="lollipop" />

</RelativeLayout>

